--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.0",
     "next": "12.2.5",
+    "next-intl": "^2.7.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
